<resources>
    <string name="app_name">统计分析记账</string>
    <string name="editone">点击记账￥</string>
    <string name="record_one">记一笔</string>
    <string name="month_out">本月支出</string>
    <string name="out">支出</string>
    <string name="month_in">本月收入</string>
    <string name="in">收入</string>
    <string name="budget">预算剩余</string>
    <string name="set_budget">设置预算</string>
    <string name="see_excel">查看图表分析</string>
    <string name="add_remark">添加备注</string>
    <string name="remark">备注</string>
    <string name="ensure">确定</string>
    <string name="cancel">取消</string>
    <string name="about">关于</string>
    <string name="setting">设置</string>
    <string name="history_record">账单记录</string>
    <string name="account_info">账单详情</string>
    <string name="please_input_time">请输入时间(24小时制)</string>
    <string name="please_search_info">请输入搜索信息</string>
    <string name="date_empty">数据为空，无此类记录~~</string>
    <string name="chart_info">账单详情</string>

    <string name="history_info">本月账单记录</string>
    <string name="clear_all">清空所有记录</string>

</resources>