<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_card_default"
    android:orientation="vertical"
    android:paddingTop="@dimen/spacing_xl"
    android:paddingBottom="@dimen/spacing_lg"
    android:paddingHorizontal="@dimen/spacing_lg">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_lg"
        android:text="更多功能"
        android:textColor="@color/text_primary"
        android:textSize="@dimen/text_subtitle"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4">

        <Button
            android:id="@+id/dialog_more_btn_record"
            style="@style/dialogmoreStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/spacing_sm"
            android:drawableTop="@drawable/it_jilu"
            android:text="@string/history_record"/>

        <Button
            android:id="@+id/dialog_more_btn_info"
            style="@style/dialogmoreStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/spacing_sm"
            android:drawableTop="@drawable/it_xiqing"
            android:text="@string/account_info"/>

        <Button
            android:id="@+id/dialog_more_btn_setting"
            style="@style/dialogmoreStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/spacing_sm"
            android:drawableTop="@drawable/it_shezhi"
            android:text="@string/setting"/>

        <Button
            android:id="@+id/dialog_more_btn_about"
            style="@style/dialogmoreStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/it_guanyu"
            android:text="@string/about"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/dialog_more_iv"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/spacing_xl"
        android:padding="@dimen/spacing_sm"
        android:src="@drawable/ih_error"
        android:contentDescription="@string/cancel"/>
</LinearLayout>
