<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background">

    <ListView
        android:id="@+id/main_lv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clipToPadding="false"
        android:divider="@null"
        android:overScrollMode="ifContentScrolls"
        android:paddingTop="@dimen/spacing_xs"
        android:paddingBottom="@dimen/spacing_sm"
        android:scrollbars="none"
        android:scrollingCache="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_bottom_bar"
        android:elevation="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/spacing_lg"
        android:paddingVertical="@dimen/spacing_md">

        <Button
            android:id="@+id/main_btn_edit"
            style="@style/AppButtonPrimary"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginEnd="@dimen/spacing_md"
            android:layout_weight="1"
            android:text="@string/record_one"/>

        <ImageButton
            android:id="@+id/main_btn_more"
            style="@style/AppButtonPrimary"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="@dimen/spacing_sm"
            android:contentDescription="@string/setting"
            android:src="@drawable/more"/>

        <ImageButton
            android:id="@+id/main_iv_search"
            style="@style/AppButtonIcon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/please_search_info"
            android:src="@drawable/search"/>
    </LinearLayout>
</LinearLayout>
